--- a/views/index.jade
+++ b/views/index.jade
@@ -39,19 +39,25 @@ block content
                     .caption
                         h3 We are
 
-                        p specialists in managing digital education projects.
+                        p specialists in managing education projects.
 
-                        p We work with organisations in Australia and NZ to deliver their small or medium-sized IT projects reliably and cost effectively.
+                        p We work with organisations in Australia and NZ to professionally deliver their small or medium-sized projects.
+
+                        p We provide affordable, high-quality project personnel for any phase of a project on a short or long-term basis.
 
             li.span4
                 .thumbnail(style='height: 450px')
                     img(src='/img/elements/dovetail_2_300.jpg', alt='')
                     .caption
-                        h3 We help
+                        h3 We help you
 
-                        p an organisation analyse its business needs and then independently propose various digital solutions.
+                        p Reduce the workload on your staff.
 
-                        p We subsequently engage the applicable technical partners, build a dedicated project team and manage the project.
+                        p Lower costs by negotiating a better deal from technical vendors.
+
+                        p Reduce risks by providing independent expertise to cut your reliance on vendors.
+
+                        p Improve your control over a project to ensure it is delivered within budget and on time.
 
             li.span4
                 .thumbnail(style='height: 450px')
@@ -59,9 +65,11 @@ block content
                     .caption
                         h3 We can
 
-                        p help you develop web services and applications for PC & Notebooks, Smartphones, Tablets and Web TV.
+                        p Independently analyse your project objectives and consider various technical solutions.
 
-                        p Or we can help you integrate new services developed by other IT vendors into your existing technical landscape.
+                        p Effectively procure technical services from any partner organisations.
+
+                        p Manage the project and technical vendors on your behalf and carry out impartial testing.
 
 
     .row
@@ -77,25 +85,32 @@ block content
                     h2.media-heading Technical services
 
 
-                    p We believe working with the education industry to successfully deliver IT projects requires a tailored approach which takes into account the industry's distinct characteristics.
+                    p We believe working with the education industry to successfully deliver projects requires a tailored approach which takes into account the sector's distinct characteristics.
 
-                    p We seek to work with public and private sector organisations on small or medium-sized projects relating to the following areas.
+                    p We can help you develop educational content whether it's web services or applications for PC and Notebooks, Smartphones, Tablets and Web TV.
 
-                    p However we are happy to discuss work outside of these areas on a case-by-case basis.
+                    p Or we can integrate or replace administration systems which help your organisation operate more efficiently.
 
+                    p We seek to work on small or medium-sized projects relating to the areas listed below. However we are happy to discuss work outside of these areas on a case-by-case basis.
 
-                    ul
-                        li Education content and apps
-                        li Distance learning and tele-education services
-                        li Adaptive learning content
-                        li Educator training content
-                        li Content management systems
-                        li School and pupil administration
-                        li Timetable development
-                        li Results management services
-                        li Communications management
-                        li Cloud services and data warehousing
-                        li Networking
+                    p
+                        h3 Education content
+                        ul
+                            li Learning management systems
+                            li Applications and adaptive learning content
+                            li Distance learning and tele-education services
+                    p
+                        h3 Business systems
+                        ul
+                            li School and pupil administration systems
+                            li Timetable development
+                            li Results management services
+                    p
+                        h3 Hardware
+                        ul
+                            li Wireless networking
+                            li Integrated whiteboards
+                            li Cloud services and data warehousing
 
     .row
         .span12
@@ -113,19 +128,21 @@ block content
 
                     p The critical aspects of our over-arching approach is summarised as follows:
 
-                    ul
-                        li Focused on very high-quality analysis of commercial and technical requirements and clear written communication.
+                    p
 
-                        li Committed to providing a transparent and independent assessment of the various possible technical solutions.
+                        h3 Business analysis and solution design
 
-                        li Willing to execute work following either an agile and iterative approach or work following formal structured approaches.
-
-                        li Able to provide strong and experienced project management which will manage all the associated vendors & internal customers.
-
-                        li Keen to work professionally and constructively with sponsors, partners and users by reporting to stakeholders clearly and frequently.
-
-                        li Aiming to provide strong technical governance to ensure the team produces high-quality outcomes reliably and affordably.
-
+                        ul
+                            li Focused on very high-quality analysis of commercial and technical requirements.
+                            li Dedicated to clear written communication.
+                            li Committed to providing a transparent and independent assessment of the various possible technical solutions.
+                    p
+                        h3 Project management
+                        ul
+                            li Willing to follow either an agile and iterative approach or work following formal structured approaches.
+                            li Able to effectively manage all the associated vendors & internal customers.
+                            li Keen to work professionally and constructively with sponsors, partners and users by reporting to stakeholders clearly and frequently.
+                            li Aiming to provide strong technical governance to ensure the team produces high-quality outcomes reliably and affordably.
 
     .row
         .span12
@@ -142,7 +159,7 @@ block content
 
                     p Dovetail Digital Healthcare and Education Pty. Ltd. is based in Sydney, Australia and was incorporated in September 2012.
 
-                    p The principal is Dominic Hebert who has over 12 years of experience in the commercial development of IT and telecommunications services with particular emphasis on mobile or web services and software development.
+                    p The principal is Dominic Hebert who has over 12 years of experience in project management and business analysis with respect to the development of IT and telecommunications services across various industries.
 
     .row
         .span12
@@ -161,9 +178,6 @@ block content
                 p Clients, please contact us for an obligation free initial consultation. If you're in Sydney, we'd be happy to meet in person.
 
                 p Candidates, enquiries are welcome and please email your details to our recruitment drop box.
-
-                p Investors, please email our drop box with any enquiries or let us know when we can contact you to discuss your interest.
-
 
                 form.well
 
